# randomwalk-sim

./: .gitignore  README.md
Flask-Backend/: app.py  classical_utils.py  compare.ipynb  pyproject.toml  quantum_utils.py
React-Frontend/: package-lock.json  package.json
React-Frontend/public/: index.html
React-Frontend/src/: App.js  index.css
React-Frontend/src/components/: BarPlot.js  Classical1D.js  ClassicalPage.js  Footer.css  Footer.js  Heatmap.js  HeatmapGif.js  MultipleSimulationsView.js  NavBar.css  NavBar.js  Network.js  Plots.css  Quantum2DPage.js  QuantumPage.js  ThemeToggle.js
React-Frontend/src/contexts/: ThemeContext.js
