[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "randomwalk-sim"
version = "0.1.0"
description = "Random Walk Simulation project with Flask backend and React frontend"
authors = [
    { name="Máté Gregosits", email="mgregosits24@gmail.com" }
]

[project.dependencies]
flask = "^2.0.0"
flask-cors = "^3.0.0"
classical-utils = { path = "./path/to/classical-utils" }
quantum-utils = { path = "./path/to/quantum-utils" }
base64 = "*"
io = "*"
imageio = "^2.0.0"
time = "*"
typing = "*"
numpy = "^1.21.0"
pandas = "^1.3.0"
pydtmc = "^6.0.0"
seaborn = "^0.11.0"
matplotlib = "^3.4.0"
scipy = "^1.7.0"
cirq = "^0.10.0"
